--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,33 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+nav {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  border-bottom: 2px dashed #C0C0C0;
+  padding: 20px 5% 20px 5%;
+  width: 100%;
+  margin: 0 auto;
+}
+nav p {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  margin-right: 8%;
+  width: 48%;
+  padding-right: 2%;
+}
+nav p a:link {
+  text-decoration: none;
+}
+nav p a:visited {
+  text-decoration: none;
+}
+nav h1 {
+  width: 38%;
+  margin-left: 10%;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -178,6 +205,13 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+header {
+  padding-bottom: 20px;
+  border-bottom: 2px dashed #C0C0C0;
+}
+header img {
+  padding-bottom: 20px;
 }
 .home .content-section {
   margin: 30px 0;
