--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,19 @@
-.home {
 
+header {
+  padding-bottom: 20px;
+  border-bottom: 2px dashed @navigation-border;
+  img {
+    padding-bottom:20px;
+  }
+}
+
+.home {
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
