--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation Styles here
+nav {
+    .flexFlow(row, nowrap);
+    justify-content: space-between;
+    border-bottom: 2px dashed @navigation-border;
+    padding: 20px 5% 20px 5%;
+    width: 100%;
+    margin: 0 auto;
+    p {
+        .flexFlow(row, nowrap);
+        justify-content: space-around;
+        margin-right:8%;
+        width: 48%;
+        padding-right: 2%;
+        a:link {
+           text-decoration: none; 
+        }
+        a:visited {
+            text-decoration: none;
+        }
+    }
+    h1{
+        width: 38%;
+        margin-left: 10%;
+    }
+}
