--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,6 +12,11 @@ nav {
         margin-right:8%;
         width: 48%;
         padding-right: 2%;
+
+        a {
+            .flexFlow(row, nowrap);
+        }
+
         a:link {
            text-decoration: none; 
         }
