--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,6 +4,11 @@
     flex-flow: @rowColumn @wrapOrNah;
 }
 
+.center() {
+    justify-content: center;
+    align-items: center;
+}
+
 .marginsYo(){
     margin-left: 10%;
     margin-right: 10%;
@@ -11,5 +16,17 @@
         margin-left: 5%;
         margin-right: 5%;
     }
+}
+
+.buttonsOmg(@height, @width, @buttonColor, @buttonText, @fontSize) {
+    height: @height;
+    width: @width;
+    background-color:@buttonColor;
+    color: @buttonText;
+    border-radius: 15px;
+    font-size: @fontSize;
+    text-align: center;
+    .flexFlow(row, nowrap);
+    .center();
 }
 
