--- a/less/navigation.less
+++ b/less/navigation.less
@@ -28,4 +28,15 @@ nav {
         width: 38%;
         margin-left: 10%;
     }
+    @media @mobile {
+        .flexFlow (column, nowrap);
+        .center();
+        width:100%;
+        padding-bottom:10px;
+        p{
+            width:80%;
+            margin: 0 auto;
+            padding-top: 10px;
+        }
+    }
 }
